[package]
name = "id"
version = "0.1.0"
authors = ['Sora Suegami']
edition = "2018"

[dependencies]
sp-std = {git="https://github.com/paritytech/substrate.git", version="2.0.0-dev", default_features = false}
hash-db = { version = "0.15.2", default-features = false }
wasmi = {git="https://github.com/paritytech/wasmi.git", version = "0.6.2", default-features = false, features = ["core"]}
hex = { version = "0.4", default-features = false }
pdcn_system_crypto = {path="../../systems/crypto", default-features = false}

[features]
default = []
