[package]
name = "wasm_attestation"
version = "0.1.0"
authors = ['Sora Suegami']
edition = "2018"

[dependencies]
#wasm-bindgen = "0.2.62"
sp-std = {git="https://github.com/paritytech/substrate.git", version="2.0.0-dev", default_features = false}
sp-core = {git="https://github.com/paritytech/substrate.git", version="2.0.0-dev", default_features = false}


[features]
default = []

[lib]
crate-type = ["cdylib"]

