[package]
name = "wasm_detection"
version = "0.1.0"
authors = ['Sora Suegami']
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.62"
parity-scale-codec = {version = "1.3.0", default_features=false}
sp-std = {git="https://github.com/paritytech/substrate.git", version="2.0.0-dev", default_features = false}
sp-core = {git="https://github.com/paritytech/substrate.git", version="2.0.0-dev", default_features = false}
parity-wasm = { version = "0.41", default-features = false }
wasmi = {git="https://github.com/paritytech/wasmi.git", version = "0.6.2", default-features = false, features = ["core"]}
no-std-compat = "0.4.0"
failure = {version="0.1.6", default-features = false, features = ["derive"]}
hex = { version = "0.4", default-features = false }

[features]
default = []

[lib]
crate-type = ["cdylib"]

